# tyche-lib

./: .gitignore  README.md  pyproject.toml
src/tyche/: __init__.py  tyche.py
src/tyche.egg-info/: PKG-INFO  SOURCES.txt
src/tyche_hgoldstein95/: tyche.py
src/tyche_hgoldstein95.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
