[project]
name = "tyche"
version = "0.0.2"
authors = [
  { name="Harrison Goldstein", email="hgoldstein95@gmail.com" },
]
description = "A python library for use with the Tyche VSCode extension."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coverage"
]

[project.urls]
"Homepage" = "https://github.com/hgoldstein95/tyche-lib"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
